[gd_scene load_steps=3 format=3 uid="uid://ehh2ig14eqbk"]

[ext_resource type="Script" path="res://scripts/tableObject.gd" id="1_l7623"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abnth"]
size = Vector2(236, 321)

[node name="TableObject" type="Node2D"]
script = ExtResource("1_l7623")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1.90735e-06)
scale = Vector2(0.261458, 0.261458)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_abnth")

[node name="ClickAreas" type="Area2D" parent="."]
visible = false

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="ClickAreas" to="." method="_on_click_areas_input_event"]
[connection signal="mouse_entered" from="ClickAreas" to="." method="_on_click_areas_mouse_entered"]
[connection signal="mouse_exited" from="ClickAreas" to="." method="_on_click_areas_mouse_exited"]
